# os_lab_5-7

./: CMakeLists.txt  README.md
doc/: .~lock.report 2.docx#  report 2.docx
include/: tree.h
src/: client.cpp  main.cpp  tree.cpp
